[package]
edition = "2021"
name = "rxing"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.14", default-features = false, features = ["napi4"] }
napi-derive = "2.10.1"
image = "0.24.5"
rxing = {version = "~0.3.0", features = ["image", "svg_read", "svg_write"] }
data-url = "0.2.0"
base64 = "0.21.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
